--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Expensify</title>
+  <script src="https://kit.fontawesome.com/a08b218cf6.js" crossorigin="anonymous"></script>
   <link rel="icon" type="image/png" href="/images/favicon.png" />
   <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
 </head>
